manifests/base/resources/nl-parser/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nl-parser
    chart: nl-parser-1.1.0
    heritage: Helm
    release: nl-parser
  name: nl-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nl-parser
      release: nl-parser
  template:
    metadata:
      labels:
        app: nl-parser
        release: nl-parser
    spec:
      containers:
      - env:
        - name: LOG_LEVEL
          value: info
        - name: DATA_PREP_URI
          valueFrom:
            configMapKeyRef:
              key: dataPrepUri
              name: nl-parser-configs
        - name: DPS_URI
          value: $(DATA_PREP_URI)
        - name: DPS_ROUTING_ENABLED
          value: "true"
        - name: NLU_MULTI_LINGUAL
          value: "false"
        image: qliktech-docker.jfrog.io/nl-parser:0.56.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 30302
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: main
        ports:
        - containerPort: 30302
      imagePullSecrets:
      - name: artifactory-docker-secret
---
