manifests/base/resources/nl-parser/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "30302"
    prometheus.io/scrape: "true"
  labels:
    app: nl-parser
    chart: nl-parser-1.1.0
    heritage: Helm
    release: nl-parser
  name: nl-parser
spec:
  ports:
  - name: nl-parser
    port: 30302
    protocol: TCP
    targetPort: 30302
  selector:
    app: nl-parser
    release: nl-parser
  type: ClusterIP
---
