manifests/base/resources/nl-parser/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://nl-parser-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
  labels:
    app: nl-parser
    chart: nl-parser-1.1.0
    heritage: Helm
    release: nl-parser
  name: nl-parser
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nl-parser
          servicePort: 30302
        path: /api/v1/parse
---
